conftest/sonarqube.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
    environment: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sonarqube
      release: sonarqube-stable
  template:
    metadata:
      labels:
        app: sonarqube
        release: sonarqube-stable
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: sonarqube
          imagePullPolicy: IfNotPresent
          image: sonarqube
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 4000m
              memory: 6000Mi
          ports:
            - name: http-port
              containerPort: 9000
              protocol: TCP
